fix h1 and logo size on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -4042,9 +4042,12 @@ input[type=button].btn-block {
     padding-left: 0;
   }
   .motoriders-logo {
-     max-width: 50%;
+     max-width: 20%;
      height: auto;
    }
+  header.masthead h1 {
+    font-size: 2rem;
+  }
 }
 @media (min-width: 576px) {
   .navbar-expand-sm {
@@ -4088,9 +4091,12 @@ input[type=button].btn-block {
     padding-left: 0;
   }
   .motoriders-logo {
-     max-width: 75%;
+     max-width: 40%;
      height: auto;
    }
+  header.masthead h1 {
+    font-size: 2.2rem !important;
+  }
 }
 @media (min-width: 768px) {
   .navbar-expand-md {
@@ -4140,6 +4146,13 @@ input[type=button].btn-block {
       width: 65% !important; 
       text-align: center !important;
       margin-bottom: 2em !important;
+  }
+  .motoriders-logo {
+     max-width: 60%;
+     height: auto;
+   }
+  header.masthead h1 {
+    font-size: 3rem !important;
   }
 }
 @media (min-width: 992px) {
